--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -7,18 +7,19 @@ on:
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v2
-    
+
     - name: build
     - uses: jorelali/setup-elm@v3
       with:
         elm-version: 0.19.1
-    - run: elm make src/Main.elm --output=main.js
+    - run: elm make src/Main.elm
 
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./
+        publish_dir: ./dist
+        cname: shinbunbun.info
