--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,11 +11,11 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
-    - name: build
-    - uses: jorelali/setup-elm@v3
-      with:
-        elm-version: 0.19.1
-    - run: elm make src/Main.elm
+    # - name: build
+    # - uses: jorelali/setup-elm@v3
+    #   with:
+    #     elm-version: 0.19.1
+    # - run: elm make src/Main.elm
 
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
