--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -22,11 +22,11 @@ jobs:
     - name: build
       run: elm make src/Main.elm --output=main.js
 
-    - name: ls
-      run: ls -la
+    - name: cp
+      run: cp index.html main.js ./dist
 
     - name: deploy
       uses: peaceiris/actions-gh-pages@v3
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./
+        publish_dir: ./dist
